# Halo-MCC-VR

./: .gitignore  AGENTS.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  deploy-odst-private.bat  deploy.bat  export-alpha.bat
docs/: CONTINUATION.md  CURRENT-STATE.md  EDITING-KIT-EVIDENCE.md  HISTORY.md  ODST-CAMERA-LAYOUT.md  ODST-MINIMAL-BRINGUP-HANDOFF.md  ODST-SIGNATURE-EVIDENCE.md  ODST-WEAPON-IK-EVIDENCE.md  PLAN.md  RE-notes.md  RELEASE-ANTIVIRUS-CHECKLIST.md  RELEASE-NOTES-0.1.1.md  RELEASE-NOTES-0.1.2.md  RELEASE-NOTES-0.1.3.md  RELEASE-NOTES-0.1.md  TEST-CHECKPOINT-2026-07-18-sessionA.md  TEST-CHECKPOINT-2026-07-18.md  VRIK-ROADMAP.md
installer/: ALPHA-README.txt  MANUAL-README.txt  install.bat  uninstall.bat
releases/0.2.1/: manifest.json
releases/0.2.2/: RELEASE-NOTES.md  manifest.json
src/common/: config.cpp  config.h  hud_layout_logic.h  input_logic.cpp  input_logic.h  log.cpp  log.h  odst_bringup_logic.h  runtime_types.h  scope_logic.cpp  scope_logic.h  title_registry.cpp  title_registry.h
src/dll/: d3d11_hook.cpp  d3d11_hook.h  d3d_state.h  dllmain.cpp  game.cpp  game.h  ik.cpp  ik.h  input.cpp  menu.cpp  menu.h  sigscan.cpp  sigscan.h  title_adapter.cpp  title_adapter.h  vr.cpp  vr.h
src/launcher/: launcher.cpp
tests/: core_tests.cpp  uninstall_safety_test.ps1
tools/: camscan.cpp  disasm.py  find_string_xrefs.py  odst_layout_probe.py  package-candidate.ps1  pause_scan.py  pedis.py  snapshot_xrefs.py  verify_sig.py
